--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -138,16 +138,18 @@ body.has-sidebar {
     padding-left: 310px;
     min-height: 100vh;
     overflow-x: hidden;
-    transition: 0.5s;
+    /*transition: 0.5s;*/
 }
 
 header {
-    background: linear-gradient(90deg, #196ec3 0%, #1f88f1 33%, #3b9dff 66%, #5eafff 100%);
-    width: 60px;
+    /*background: linear-gradient(90deg, #196ec3 0%, #1f88f1 33%, #3b9dff 66%, #5eafff 100%);*/
+    width: 80px;
+    /*width: 60px;*/
     height: 100vh;
     position: fixed;
     top: 0;
     left: 0;
+    /*padding: 20px 0;*/
     padding: 20px 0;
     border-right: solid 1px rgba(0,0,0,0.1);
     z-index: 10;
@@ -183,15 +185,16 @@ header ul li .user-wrapper > a {
     width: 40px;
     height: 40px;
     display: block;
-    border-radius: 50%;
+    border-radius: 8px;
     text-align: center;
     line-height: 40px;
-    color: #ffffff;
+    color: #444444;
 }
 
+header ul li > a.active,
 header ul li > a:hover {
     color: #ffffff;
-    background-color: rgba(0,0,0,0.1);
+    background-color: #1e87f0;
 }
 
 header ul li .user-wrapper a:hover {
@@ -201,6 +204,12 @@ header ul li .user-wrapper a:hover {
 header ul li .user-wrapper a img {
     border-radius: 50%;
     border: solid 1px rgba(0,0,0,0.1);
+}
+
+header ul li:nth-child(2) {
+    align-self: flex-end;
+    align-items: flex-end;
+    flex-grow: 1;
 }
 
 header ul li:last-of-type {
@@ -215,13 +224,14 @@ header ul li:last-of-type a {
 }
 
 header ul li.app-logo a {
-    background-color: transparent;
+    /*background-color: transparent;*/
+    background-color: #444444;
     color: #ffffff;
     font-size: 20px;
     height: 40px;
     width: 40px;
     line-height: 40px;
-    border-radius: 50%;
+    border-radius: 8px;
     text-align: center;
     border: solid 1px transparent;
     display: inline-block;
@@ -229,8 +239,7 @@ header ul li.app-logo a {
 }
 
 header ul li.app-logo a:hover {
-    background-color: rgba(255,255,255,0.1);
-    border-color: rgba(255,255,255,0.3);
+    opacity: 0.8;
 }
 
 header .user.active img {
@@ -243,10 +252,10 @@ header .user.active img {
     left: 60px;
     height: 100vh;
     width: 250px;
-    background: #f1f1f1;
+    /*background: #f1f1f1;*/
     border-right: solid 1px rgba(0,0,0,0.1);
     padding: 30px;
-    transition: 0.5s;
+    /*transition: 0.5s;*/
 }
 
 .header-sidebar > div {
@@ -938,7 +947,7 @@ textarea {
     background-color: #fff;
     padding: 10px 20px 0;
     border: solid 1px rgba(0,0,0,0.2) !important;
-    border-radius: 4px;
+    border-radius: 14px;
 }
 
 .note-toolbar {
@@ -1314,7 +1323,7 @@ span.small {
 
 .box {
     padding: 20px;
-    background-color: #f1f1f1;
+    border: solid 1px rgba(0,0,0,0.2);
     border-radius: 14px;
 }
 
