--- a/public/views/project/view_projects.css
+++ b/public/views/project/view_projects.css
@@ -63,14 +63,7 @@
     margin-left: 5px;
 }
 
-/* new project design */
-.app-projects-wrapper {
-    padding: 30px;
-    background-color: #f1f1f1;
-    border-radius: 20px;
-}
-
-.app-projects-wrapper .uk-slider {
+.uk-slider {
     margin-left: -15px;
     margin-top: -20px;
     padding-top: 20px;
