--- a/public/views/task/view_task.css
+++ b/public/views/task/view_task.css
@@ -26,7 +26,7 @@ body {
     width: 300px;
     background-color: rgb(246,246,246);
     height: 100vh;
-    padding: 105px 30px 30px 30px;
+    padding: 30px;
     border-left: solid 1px rgba(0,0,0,0.2);
 }
 
