--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -378,14 +378,6 @@ header .user.active img {
         left: -250px;
     }
 
-    header >:first-child {
-        padding-left: 10px;
-    }
-
-    header >:last-child {
-        padding-right: 10px;
-    }
-
     .header-sidebar .uk-width-auto {
         width: 100%;
     }
@@ -1065,9 +1057,14 @@ textarea {
 .note-editable {
     padding: 10px 0 20px 0 !important;
     background-color: #fff !important;
-    /*border: solid 1px rgba(0,0,0,0.1);*/
 }
 
+
+.note-editable ul {
+    margin-bottom: 20px;
+}
+
+.box >:last-child,
 .note-editable >:last-child {
     margin-bottom: 0 !important;
 }
@@ -1380,7 +1377,7 @@ span.small {
     background-color: #f1f1f1;
 }
 
-.section *:last-of-type {
+.section > *:last-of-type {
     margin-bottom: 0;
 }
 
