--- a/public/views/journal_report/view_journal_report.css
+++ b/public/views/journal_report/view_journal_report.css
@@ -1,22 +1,12 @@
-.statistic_achievements,
-.statistic_1_star_days,
-.statistic_2_star_days,
-.statistic_3_star_days,
-.statistic_4_star_days,
-.statistic_5_star_days {
+.statistic_achievements {
     font-size: 34px;
     color: white;
 }
 
-.total_1_star_days,
-.total_2_star_days,
-.total_3_star_days,
-.total_4_star_days,
-.total_5_star_days,
 .total_achievements {
     padding: 10px;
     border: solid 1px rgba(0,0,0,0.3);
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .total_achievements {
@@ -68,4 +58,46 @@
 .journal_report_navigation > div .journal_report_calendar_left:hover,
 .journal_report_navigation > div .journal_report_calendar_right:hover {
     background-color: rgba(0,0,0,0.1);
+}
+
+.day_ratings .day_rating {
+    padding: 20px;
+    background-color: #f1f1f1;
+    border-radius: 8px;
+}
+
+.day_ratings .day_rating.amazing {
+    background-color: #0037ff;
+}
+
+.day_ratings .day_rating.good {
+    background-color: #1e87f0;
+}
+
+.day_ratings .day_rating.average {
+    background-color: #32d296;
+}
+
+.day_ratings .day_rating.poor {
+    background-color: #ffa500;
+}
+
+.day_ratings .day_rating.bad {
+    background-color: #f0506e;
+}
+
+.day_ratings .day_rating span {
+    font-size: 40px;
+    line-height: 50px;
+    color: #ffffff;
+    font-weight: bold;
+    text-shadow: 1px 1px #f1f1f1;
+    display: block;
+}
+
+.day_ratings .day_rating p {
+    font-size: 16px;
+    line-height: 28px;
+    color: #ffffff;
+    font-weight: bold;
 }
