--- a/public/views/task/view_task.css
+++ b/public/views/task/view_task.css
@@ -158,7 +158,9 @@ body {
 }
 
 #task .task_title_wrapper {
-    background-color: #f1f1f1;
+    background-color: #ffffff;
+    border: solid 1px rgba(0,0,0,0.1);
+    border-radius: 8px;
 }
 
 #task .task_title_wrapper > div {
@@ -171,6 +173,7 @@ body {
     outline: none;
     font-size: 16px;
     line-height: 30px;
+    padding: 10px 20px;
 }
 
 #task .task_title_wrapper .badge {
