--- a/public/views/task/view_task.css
+++ b/public/views/task/view_task.css
@@ -48,19 +48,19 @@ body {
     right: 0;
 }
 
-#task .task_sidebar *+.task_timelog_row {
+#task .task_sidebar *+.task_time_log_row {
     margin-top : 10px;
 }
 
-#task .task_sidebar *+.task_timelog_row .task_timelog_user {
+#task .task_sidebar *+.task_time_log_row .task_time_log_user {
     margin-right: 10px;
 }
 
-#task .task_sidebar .task_timelog_row .task_timelog_time_spent {
+#task .task_sidebar .task_time_log_row .task_time_log_time_spent {
     min-width: 50px;
 }
 
-#task .task_sidebar .task_timelog_row .task_timelog_time_spent_percent {
+#task .task_sidebar .task_time_log_row .task_time_log_time_spent_percent {
     padding-left: 10px;
 }
 
@@ -184,7 +184,7 @@ body {
     border-left: solid 1px rgba(0,0,0,0.1);
 }
 
-#task .task_timelog_user img,
+#task .task_time_log_user img,
 #task .task_reporter_user img,
 #task .task_assigned_to img {
     width: 25px !important;
