--- a/public/assets/css/application.css
+++ b/public/assets/css/application.css
@@ -268,6 +268,7 @@ header .user.active img {
     width: 250px;
     border-right: solid 1px rgba(0,0,0,0.1);
     padding: 30px;
+    background-color: #ffffff;
 }
 
 .sidebar-closed .header-sidebar {
@@ -301,6 +302,7 @@ header .user.active img {
 
 .header-sidebar > div {
     width: 189px;
+    margin: 0 auto;
 }
 
 .header-sidebar h2 {
@@ -363,45 +365,21 @@ header .user.active img {
 }
 
 @media(max-width: 800px) {
-    .header-sidebar > div {
-        width: 44px;
-    }
-
     body.has-sidebar {
         padding-left: 80px;
     }
 
-    .header-sidebar {
+    body:not(.sidebar-open) .header-sidebar > div {
+        width: 44px;
+    }
+
+    :not(.sidebar-open) .header-sidebar {
         padding-left: 10px;
         padding-right: 10px;
-        text-align: center;
         left: -250px;
     }
 
     .header-sidebar .uk-width-auto {
-        width: 100%;
-    }
-
-    .header-sidebar a {
-        text-align: center;
-    }
-
-    .header-sidebar a span {
-        display: none;
-    }
-
-    .hide-at-800 {
-        display: none;
-    }
-
-    .header-sidebar a {
-        margin: 0;
-        width: 100%;
-        padding: 5px;
-        font-size: 20px;
-    }
-
-    .header-sidebar span.badge {
         width: 100%;
     }
 }
@@ -947,6 +925,22 @@ textarea {
 
 .sidebar-closed .close-sidebar > i:before {
     content: "\f054";
+}
+
+@media(max-width: 800px) {
+    .close-sidebar > i:before {
+        content: "\f054";
+    }
+
+    .sidebar-open .close-sidebar > i:before {
+        content: "\f053";
+    }
+
+    .sidebar-open .header-sidebar {
+        left: 80px;
+        position: fixed;
+        z-index: 9;
+    }
 }
 
 .navigation > div > div {
