--- a/public/views/project/view_project.css
+++ b/public/views/project/view_project.css
@@ -11,9 +11,17 @@
     line-height: 40px;
 }
 
-.task_navigation p span.count,
-.task_navigation p span.total {
-    font-weight: 700;
+.task_navigation > div {
+    margin-left: 10px;
+}
+
+.task_navigation > div a {
+    background-color: #ffffff;
+    border: solid 1px rgba(0,0,0,0.1);
+}
+
+.task_navigation > div a:hover {
+    background-color: rgba(0,0,0,0.1);
 }
 
 /* Project Sidebar */
