--- a/public/views/store/store_product/view_store_product.css
+++ b/public/views/store/store_product/view_store_product.css
@@ -1,19 +1,17 @@
-.store_product_title_wrapper {
-    background-color: #f1f1f1;
-    border-bottom: solid 1px rgba(0,0,0,0.1);
+.store_product_title_wrapper > div {
+    margin-left: 10px;
 }
 
-.store_product_title_wrapper > div > div {
-    padding: 10px;
+.store_product_title_wrapper > div a {
+    background-color: #ffffff;
+    border: solid 1px rgba(0,0,0,0.1);
 }
 
-.store_product_title_wrapper > div > div:first-of-type {
-    padding-left: 20px;
+.store_product_title_wrapper > div a:hover {
+    background-color: rgba(0,0,0,0.1);
 }
 
 .store_product_title_wrapper a {
-    line-height: 20px;
-    padding: 10px;
     border-radius: 4px;
     border: solid 1px transparent;
     display: block;
@@ -64,9 +62,15 @@
 .store_product_preview_image img {
     border: solid 1px rgba(0,0,0,0.1);
     padding: 5px;
-    border-radius: 4px;
+    border-radius: 8px;
 }
 
 .store_product_preview_image:hover img {
     background-color: #1e87f0;
+}
+
+.store_product_description {
+    font-size: 14px !important;
+    max-width: 600px;
+    margin-bottom: 0;
 }
