--- a/public/views/store/store_product/view_store_products.css
+++ b/public/views/store/store_product/view_store_products.css
@@ -2,7 +2,7 @@
     line-height: 20px;
     padding: 10px;
     border-radius: 4px;
-    border: solid 1px transparent;
+    border: solid 1px rgba(0,0,0,0.1);
     display: block;
     position: relative;
 }
