--- a/public/views/task/task_log_activity/view_task_log_activity.css
+++ b/public/views/task/task_log_activity/view_task_log_activity.css
@@ -1,16 +1,3 @@
-.task_log_activity_header {
-    background-color: #f1f1f1;
-    border-bottom: solid 1px rgba(0,0,0,0.1);
-}
-
-.task_log_activity_header > div > div {
-    padding: 10px;
-}
-
-.task_log_activity_header > div > div:first-of-type {
-    padding-left: 20px;
-}
-
 .task_logs_sidebar {
     position: fixed;
     top: 0;
@@ -19,6 +6,16 @@
     width: 350px;
     background-color: #f1f1f1;
     border-left: solid 1px rgba(0,0,0,0.1);
+}
+
+.task_log_activity_header > div a {
+    background-color: #ffffff;
+    border-radius: 4px;
+    border: solid 1px rgba(0,0,0,0.1);
+}
+
+.task_log_activity_header > div a:hover {
+    background-color: rgba(0,0,0,0.1);
 }
 
 .task_log_activity {
@@ -32,6 +29,10 @@
 
     .task_log_activity {
         padding-right: 350px;
+    }
+
+    .title-block {
+        padding-right: 380px !important;
     }
 }
 
