--- a/public/views/journal_dashboard/view_journal_dashboard.css
+++ b/public/views/journal_dashboard/view_journal_dashboard.css
@@ -48,3 +48,12 @@
     color: #ffffff;
     font-weight: bold;
 }
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .journal_month h2,
+.dark-theme .journal_month > a {
+    border-color: var(--border-light);
+}
