--- a/public/views/journals/view_journals.css
+++ b/public/views/journals/view_journals.css
@@ -4,17 +4,6 @@
     margin-left: 10px;
 }
 
-.journal_navigation > div .journal_calendar_left,
-.journal_navigation > div .journal_calendar_right {
-    background-color: #ffffff;
-    border: solid 1px rgba(0,0,0,0.1);
-}
-
-.journal_navigation > div .journal_calendar_left:hover,
-.journal_navigation > div .journal_calendar_right:hover {
-    background-color: rgba(0,0,0,0.1);
-}
-
 .journal_month {
     position: relative;
 }
@@ -111,4 +100,26 @@
     #journals .journal_month a .box_wrapper {
         min-height: 143px;
     }
+}
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .journal_rating_badge,
+.dark-theme .journal_achievements {
+    background-color: var(--dark-secondary);
+    border-color: var(--border-light);
+}
+
+.dark-theme .journal_achievements {
+    color: var(--text-light-primary);
+}
+
+.dark-theme .journal_overall_content p.placeholder span {
+    background-color: var(--dark-secondary);
+}
+
+.dark-theme .journal_rating_badge .placeholder {
+    color: #0e141a;
 }
