--- a/public/views/project/view_project.css
+++ b/public/views/project/view_project.css
@@ -19,15 +19,6 @@
     margin-left: 10px;
 }
 
-.task_navigation > div a {
-    background-color: #ffffff;
-    border: solid 1px rgba(0,0,0,0.1);
-}
-
-.task_navigation > div a:hover {
-    background-color: rgba(0,0,0,0.1);
-}
-
 /* Project Sidebar */
 .project_sidebar {
     position: fixed;
@@ -35,8 +26,8 @@
     top: 0;
     width: 350px;
     height: 100vh;
-    background-color: #f1f1f1;
-    border-left: solid 1px rgba(0,0,0,0.1);
+    background-color: var(--light-secondary);
+    border-left: solid 1px var(--border-dark);
     padding: 30px;
 }
 
@@ -51,7 +42,7 @@
     font-size: 16px;
     outline: none;
     border-radius: 4px;
-    border: solid 1px rgba(0,0,0,0.2);
+    border: solid 1px var(--border-dark);
 }
 
 .sidebar_open #project .project_sidebar {
@@ -72,8 +63,9 @@
     line-height: 20px;
     padding-top: 20px;
     margin-top: 20px;
-    border-top: solid 1px rgba(0,0,0,0.2);
+    border-top: solid 1px var(--border-dark);
     margin-bottom: 10px;
+    color: var(--text-dark-primary);
 }
 
 .project_sidebar *+.checkbox_row {
@@ -81,12 +73,12 @@
 }
 
 .project_sidebar .checkbox_row input[type=checkbox] {
-    margin-right: 5px;
+    margin-right: 10px;
     border-radius: 3px;
 }
 
 .project_sidebar .checkbox_row .uk-checkbox {
-    background-color: #fff;
+    background-color: var(--light-primary);
 }
 
 .project_sidebar .checkbox_row .uk-checkbox:checked {
@@ -95,7 +87,7 @@
 
 .project_sidebar .checkbox_row label {
     font-size: 14px;
-    color: rgba(0,0,0,0.5);
+    color: var(--text-dark-primary);
 }
 
 .project_sidebar .clear_filters {
@@ -106,4 +98,26 @@
 /* Project Content */
 .project_content {
     padding: 20px;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .project_sidebar {
+    background-color: var(--dark-secondary);
+    border-left: solid 1px var(--border-light);
+}
+
+.dark-theme .project_sidebar h3 {
+    border-color: var(--border-light);
+    color: var(--text-light-primary);
+}
+
+.dark-theme .project_sidebar .checkbox_row label {
+    color: var(--text-light-secondary);
+}
+
+.dark-theme .project_sidebar .checkbox_row .uk-checkbox:not(:checked) {
+    background-color: var(--dark-primary);
 }
