--- a/public/views/project/view_projects.css
+++ b/public/views/project/view_projects.css
@@ -75,7 +75,6 @@
     position: relative;
     z-index: 10000;
     border: solid 1px rgba(0,0,0,0.1);
-    background-color: #fff;
     display: block;
     overflow: hidden;
 }
@@ -135,4 +134,18 @@
 
 .app-projects-navigation {
     padding-top: 15px !important;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark theme related changes.
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .app-project-grid .app-project {
+    border-color: rgba(255,255,255,0.1);
+    border-bottom: 0;
+}
+
+.dark-theme .app-project-grid .app-project .project_title_wrapper h2.project_title span,
+.dark-theme .app-project-grid .app-project .project_title_wrapper p span {
+    color: rgba(255,255,255,0.8);
 }
