--- a/public/views/task/task_checklists/view_task_checklists.css
+++ b/public/views/task/task_checklists/view_task_checklists.css
@@ -10,11 +10,8 @@
 .new_task_checklist_item .new_task_checklist_item_input,
 .new_task_checklist .new_task_checklist_input {
     padding: 8px 10px;
-    background-color: #fff !important;
-    border: solid 1px rgba(0,0,0,0.1);
     border-radius: 4px;
     width: 100%;
-    outline: none !important;
     font-size: 14px;
     line-height: 18px;
 }
@@ -22,7 +19,7 @@
 .new_task_checklist_item {
     margin: 0 -10px 0;
     padding: 10px 10px 0;
-    border-top: solid 1px rgba(0,0,0,0.1);
+    border-top: solid 1px var(--border-dark);
 }
 
 .new_task_checklist_item > div:last-of-type {
@@ -61,19 +58,17 @@
 .task_checklists .task_checklist .task_checklist_name_wrapper {
     margin: -10px -10px 0;
     padding: 10px;
-    background-color: #fff;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
 }
 
 .task_checklist_name_wrapper:focus-within,
 .task_checklists .task_checklist .task_checklist_name_wrapper:focus-within {
-    background-color: #f1f1f1;
+    background-color: var(--light-secondary);
 }
 
 .task_checklist_name,
 .task_checklists .task_checklist .task_checklist_name_wrapper .task_checklist_name {
-    outline: none;
     line-height: 30px;
 }
 
@@ -111,16 +106,10 @@
 
 .task_checklist_item,
 .task_checklists .task_checklist .task_checklist_items .task_checklist_item {
-    background-color: #fff;
     padding: 10px;
     margin-left: -10px;
     margin-right: -10px;
-    border-top: solid 1px rgba(0,0,0,0.2);
-}
-
-.task_checklist_item.complete,
-.task_checklists .task_checklist .task_checklist_items .task_checklist_item.complete {
-    background-color: #f1f1f1 !important;
+    border-top: solid 1px var(--border-dark);
 }
 
 .task_checklist_item.complete .task_checklist_item_name,
@@ -142,12 +131,11 @@
 
 .task_checklist_item:focus-within,
 .task_checklists .task_checklist .task_checklist_items .task_checklist_item:focus-within {
-    background-color: #f1f1f1;
+    background-color: var(--light-secondary);
 }
 
 .task_checklist_item_name,
 .task_checklists .task_checklist .task_checklist_items .task_checklist_item .task_checklist_item_name {
-    outline: none;
     line-height: 30px;
     font-size: 14px;
 }
@@ -162,7 +150,7 @@
     width: 25px;
     height: 25px;
     border-radius: 4px;
-    border: solid 1px rgba(0,0,0,0.1);
+    border: solid 1px var(--border-dark);
 }
 
 .task_checklist_item_name_wrapper .task_checklist_item_checkbox:focus,
@@ -227,4 +215,38 @@ html.uk-drag .uk-sortable-drag .uk-sortable-empty {
 
 .checklist_group_progress {
     margin: 0 -10px;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .task_checklist_name_wrapper,
+.dark-theme .task_checklists .task_checklist .task_checklist_name_wrapper {
+    color: var(--text-light-primary);
+}
+
+.dark-theme .task_checklist_item,
+.dark-theme .new_task_checklist_item,
+.dark-theme .task_checklists .task_checklist .task_checklist_items .task_checklist_item {
+    border-top: solid 1px var(--border-light);
+    color: var(--text-light-primary);
+}
+
+.dark-theme .task_checklist_item:focus-within,
+.dark-theme .task_checklist_name_wrapper:focus-within,
+.dark-theme .task_checklists .task_checklist .task_checklist_name_wrapper:focus-within,
+.dark-theme .task_checklists .task_checklist .task_checklist_items .task_checklist_item:focus-within {
+    background-color: var(--dark-secondary);
+}
+
+.dark-theme .task_checklist_item_checkbox_wrapper .uk-checkbox,
+.dark-theme .task_checklists .task_checklist .task_checklist_items .task_checklist_item .task_checklist_item_name_wrapper .task_checklist_item_checkbox_wrapper .uk-checkbox {
+    border: solid 1px var(--border-light);
+}
+
+.dark-theme .task_checklist_item.complete .task_checklist_item_name,
+.dark-theme .task_checklists .task_checklist .task_checklist_items .task_checklist_item.complete .task_checklist_item_name,
+.dark-theme .task_checklists .task_checklist .task_checklist_items .task_checklist_item.complete .task_checklist_item_name a {
+    color: var(--text-light-secondary);
 }
