--- a/public/views/task/view_task.css
+++ b/public/views/task/view_task.css
@@ -1,8 +1,3 @@
-/* Overriding Body */
-body {
-    background-color: #fff !important;
-}
-
 /* Task Header */
 #task .banner h2 {
     font-size: 16px !important;
@@ -158,8 +153,8 @@ body {
 }
 
 #task .task_title_wrapper {
-    background-color: #ffffff;
-    border: solid 1px rgba(0,0,0,0.1);
+    background-color: var(--light-primary);
+    border: solid 1px var(--border-dark);
     border-radius: 8px;
 }
 
@@ -196,12 +191,13 @@ body {
 
 /*  Dark Theme ------------------------------------------------------------------------------------------------------ */
 
-/*.dark-theme #task .task_sidebar {*/
-/*    background-color: #15202b !important;*/
-/*}*/
+.dark-theme #task .task_sidebar {
+    background-color: var(--dark-secondary);
+}
 
-/*.dark-theme #task .task_content .section {*/
-/*    background-color: #273038 !important;*/
-/*}*/
+.dark-theme #task .task_title_wrapper {
+    background-color: var(--dark-primary);
+    border: solid 1px var(--border-light);
+}
 
 /*  /Dark Theme ----------------------------------------------------------------------------------------------------- */
