--- a/public/views/task/view_task_list.css
+++ b/public/views/task/view_task_list.css
@@ -2,19 +2,8 @@
     margin-left: 10px;
 }
 
-.task_navigation > div .tasks_navigation_left,
-.task_navigation > div .tasks_navigation_right {
-    background-color: #ffffff;
-    border: solid 1px rgba(0,0,0,0.1);
-}
-
-.task_navigation > div .tasks_navigation_left:hover,
-.task_navigation > div .tasks_navigation_right:hover {
-    background-color: rgba(0,0,0,0.1);
-}
-
 .task-wrapper {
-    background-color: #f1f1f1;
+    background-color: var(--light-secondary);
     border-radius: 20px;
 }
 
@@ -25,7 +14,7 @@
 .tasks a .task_row {
     padding: 9px 20px;
     cursor: pointer;
-    border-bottom: solid 1px rgba(0,0,0,0.1);
+    border-bottom: solid 1px var(--border-dark);
     box-sizing: border-box;
 }
 
@@ -38,8 +27,8 @@
 }
 
 .task_row:hover {
-    background-color: #f1f1f1;
-    border-color: rgba(0,0,0,0.1);
+    background-color: var(--light-secondary);
+    border-color: var(--border-dark);
 }
 
 .task_row .task_priority,
@@ -65,6 +54,7 @@
     overflow: hidden;
     text-overflow: ellipsis;
     display: inline-block;
+    color: var(--text-dark-primary);
 }
 
 .task_name > span {
@@ -125,9 +115,9 @@
     line-height: 22px;
     font-size: 14px;
     text-align: center;
-    background-color: #f1f1f1;
+    background-color: var(--light-secondary);
     border-radius: 50%;
-    border: solid 1px rgba(0,0,0,0.1);
+    border: solid 1px var(--border-dark);
     display: block;
 }
 
@@ -141,7 +131,7 @@
 
 .project_task_board > div::-webkit-scrollbar {
     width: 1px;
-    background-color: rgba(0,0,0,0.1);
+    background-color: var(--border-dark);
 }
 
 .project_task_board > div::-webkit-scrollbar-thumb {
@@ -150,11 +140,11 @@
 }
 
 .project_task_board > div:nth-child(2n+2) {
-    background-color: #f1f1f1;
+    background-color: var(--light-secondary);
 }
 
 .project_task_board > div:nth-child(1n+2) {
-    border-left: solid 1px rgba(0,0,0,0.1);
+    border-left: solid 1px var(--border-dark);
 }
 
 .project_task_board > div > h2 {
@@ -166,7 +156,7 @@
 
 .board_task {
     padding: 15px;
-    border: solid 1px rgba(0,0,0,0.1);
+    border: solid 1px var(--border-dark);
     border-radius: 4px;
     background-color: #fff;
 }
@@ -175,18 +165,28 @@
     margin-top: 5px;
 }
 
-/*.project_task_board > div:nth-child(2n+2) .board_task {*/
-/*    background-color: #fff;*/
-/*}*/
-
 .board_task h3,
 .board_task h3 a {
     font-size: 14px;
     line-height: 20px;
-    color: rgba(0,0,0,0.4);
+    color: var(--text-dark-primary);
     max-width: 100%;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
     margin: 0;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides
+----------------------------------------------------------------------------------------------------------------------*/
+
+.task_row:hover {
+    background-color: var(--dark-secondary);
+}
+
+.board_task h3,
+.board_task h3 a,
+.dark-theme .task_name {
+    color: var(--text-light-primary);
 }
