--- a/public/views/time_log/view_time_log_calendar.css
+++ b/public/views/time_log/view_time_log_calendar.css
@@ -36,7 +36,6 @@
 .time_logs {
     border-bottom: 0;
     border-top: 0;
-    background-color: #fff;
     border-bottom-left-radius: 4px;
     border-bottom-right-radius: 4px;
 }
@@ -92,7 +91,6 @@
     position: sticky;
     top:  0;
     left: 0;
-    background-color: #fff;
 }
 
 .time_log_day_wrapper.today,
@@ -112,6 +110,7 @@
     padding: 5px 10px;
     line-height: 30px;
     font-size: 16px;
+    background-color: transparent;
 }
 
 .time_logs .time_log_entry {
@@ -153,11 +152,6 @@
 .time_logs .time_log_date_title {
     padding: 10px;
     margin: 0 -10px;
-    background-color: #fff;
-}
-
-.time_logs .today .time_log_date_title {
-    background-color: #f1f1f1;
 }
 
 .task_search_input_wrapper {
@@ -175,6 +169,10 @@
     width: 100%;
     right: -10px;
     z-index: 1000;
+}
+
+.time_log_day_wrapper:not(.today) .time_log_date_title {
+    background-color: var(--light-primary);
 }
 
 .time_log_entry .edit_time_log,
@@ -243,13 +241,46 @@
     margin-left: 10px;
 }
 
-.time_log_calendar_navigation > div .time_log_calendar_left,
-.time_log_calendar_navigation > div .time_log_calendar_right {
-    background-color: #ffffff;
-    border: solid 1px rgba(0,0,0,0.1);
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides.
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .time_logs .time_log_date_title,
+.dark-theme .time_log_title {
+    color: var(--text-light-primary);
 }
 
-.time_log_calendar_navigation > div .time_log_calendar_left:hover,
-.time_log_calendar_navigation > div .time_log_calendar_right:hover {
-    background-color: rgba(0,0,0,0.1);
+.dark-theme .time_log_entry .time_log_content p,
+.dark-theme .time_log_entry .time_log_time_spent {
+    color: var(--text-light-secondary);
+}
+
+.dark-theme .time_logs .time_log_day_wrapper {
+    border-left: solid 1px rgba(255, 255, 255, 0.1);
+}
+
+.dark-theme .time_log_day_wrapper.today,
+.dark-theme .time_log_day_wrapper.today .time_log_date {
+    background-color: var(--dark-secondary);
+}
+
+.dark-theme .time_logs .time_log_entry {
+    background-color: var(--dark-secondary);
+    border-color: var(--border-light);
+}
+
+.dark-theme .time_log_day_wrapper:not(.today) .time_log_date_title,
+.dark-theme .time_logs .today .time_log_entry {
+    background-color: var(--dark-primary);
+}
+
+.dark-theme #add_time_log_modal .uk-modal-dialog input,
+.dark-theme #add_time_log_modal .uk-modal-dialog textarea {
+    border-color: var(--border-light);
+    color: var(--text-light-primary);
+}
+
+.dark-theme #add_time_log_modal .uk-modal-dialog input::placeholder,
+.dark-theme #add_time_log_modal .uk-modal-dialog textarea::placeholder {
+    color: var(--text-light-primary);
 }
