--- a/public/views/time_log/view_time_logs.css
+++ b/public/views/time_log/view_time_logs.css
@@ -1,7 +1,6 @@
 .time_log_entry {
     padding: 10px 10px 0;
-    background-color: #fff;
-    border: solid 1px rgba(0,0,0,0.2);
+    border: solid 1px var(--border-dark);
     position: relative;
 }
 
@@ -10,7 +9,7 @@
 }
 
 .time_log_entry .time_log_information {
-    background-color: #f1f1f1;
+    background-color: var(--light-secondary);
     border-top: solid 1px rgba(0,0,0,0.2);
     padding: 6px 10px 10px;
     margin: 10px -10px 0;
@@ -24,7 +23,7 @@
     width: 25px;
     height: 25px;
     background-color: #f0506e;
-    color: #fff;
+    color: var(--text-light-primary);
     text-align: center;
     line-height: 20px;
     font-size: 14px;
@@ -39,4 +38,12 @@
 .time_log_entry .time_log_content p {
     font-size: 12px !important;
     color: rgba(0,0,0,0.2) !important;
+}
+
+/*----------------------------------------------------------------------------------------------------------------------
+Dark Theme Overrides
+----------------------------------------------------------------------------------------------------------------------*/
+
+.dark-theme .time_log_entry .time_log_information {
+    background-color: var(--dark-secondary);
 }
